--- a/php-8.1/Makefile
+++ b/php-8.1/Makefile
@@ -1,6 +1,8 @@
 dist := ubuntu
 hub := dev.hub.init6.com.pl
-VERSION := 0.0.2
+sechub := sec.hub.init6.com.pl
+
+VERSION := 0.8.0
 
 help:           
 	@egrep '^[a-zA-Z0-9_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-20s\033[0m %s\n", $$1, $$2}'
@@ -11,8 +13,11 @@ default: listrepo
 build-amd64: ## buduj obraz dla arch. AMD64
 	docker build -f Dockerfile.$(dist)  -t php.$(dist).amd64:dev-$(VERSION) .
 	docker tag php.$(dist).amd64:dev-$(VERSION) $(hub):5000/php.$(dist).amd64:dev-$(VERSION)
+	docker tag php.$(dist).amd64:dev-$(VERSION) $(sechub):5000/php-8.1-fpm.$(dist).amd64:dev-$(VERSION)
+
 push-amd64:  ## przeslij obraz dla arch. AMD64 do repozytorium
 	docker push $(hub):5000/php.$(dist).amd64:dev-$(VERSION)
+	docker push $(sechub):5000/php-8.1-fpm.$(dist).amd64:dev-$(VERSION)
 manifest-amd64: ## generuj manifest dla arch. AMD64
 	docker manifest inspect --insecure $(hub):5000/php.$(dist).amd64:dev-$(VERSION)
 
